--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 counter.mov filter=lfs diff=lfs merge=lfs -text
 fireworks.mp4 filter=lfs diff=lfs merge=lfs -text
 
-build/* linguist-vendored
+build/SDC Animation.build/Debug/SDC Animation.build/Objects-normal/x86_64/main.d linguist-vendored
+ 
